Fixed alignment of the attachment editor close button

--- a/assets/css/scss/partials/_meta-box.scss
+++ b/assets/css/scss/partials/_meta-box.scss
@@ -63,6 +63,7 @@
 		width: 40px;
 		background: white;
 		background: rgba(255,255,255,.9);
+		right: 20px;
 	}
 	#wpcontent {
 		width: 96%;
